Kubernetes-Manifests-file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: prelude   ##
  # Use Ingress annotations to customize the Load-Balancer configuration, including restricting traffic.
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip                 # This ensures that the Load Balancer communicates directly with pods instead of nodes.
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'   # it's 443 in real time
    # alb.ingress.kubernetes.io/subnets: "subnet-0aa439b4ddafcca10,subnet-0b95df318219145ca"
    # alb.ingress.kubernetes.io/inbound-cidrs: "203.0.113.0/24,192.0.2.0/24"      # Allows traffic only from these ip's. This rule is added to the ALB's SG.
spec:
  ingressClassName: alb
  rules:
    - host: adithyark.click     ##
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /ready
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /started
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
